# training_song

./: .env.template  .gitignore  .pylintrc  README.md  app.py  example.py  f.py  main.py  pyproject.toml  requirements.txt  test_file.json  tox.ini  training_song.py  vercel.json
.github/workflows/: release.yaml  tests.yaml
api/: main.py
server/: Spacefile  api.py  billboard_io.py  local_utils.py  requirements.txt  spotify.py  ts_utils.py
server/db/: db.py
tests/: test_training_song.py
tests/server/: test_api.py  test_billboard.py  test_db.py
training_song/: f.py  training_song.py
training_song/server/: api.py  billboard_io.py  pyproject.toml  spotify.py  vercel.json
training_song/server/db/: db.py
trainingsong/: __init__.py  core.py  db_utils.py  ts_utils.py
trainingsong/server/: api.py  billboard_io.py  db.py  hard_coded.py  spotify.py
