[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "training-song"
version = "0.2.2"
description = "Audio Motivation for Data Scientists and ML Engineers"
authors = ["koayon <koayon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "trainingsong"}]

[project]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
lyricsgenius = "^3.0.1"
spotipy = "^2.23.0"
billboard-py = "^7.0.0"
uvicorn = "^0.22.0"
databases = "^0.5.2"
sqlalchemy = "^1.4.26"
python-dotenv = "^0.19.1"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.3"
responses = "^0.13.4"
httpx = "^0.23.0"
starlette = "^0.27.0"
httpcore = "^0.15"
pytest-asyncio = "^0.15.1"
cryptography = "^38.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^2.17.4"
