[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "training-song"
version = "0.2.2"
description = "Audio Motivation for Data Scientists and ML Engineers"
authors = ["koayon <koayon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "trainingsong"}]

[project]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = ">=0.95.1,<0.107.0"
lyricsgenius = "^3.0.1"
spotipy = "^2.23.0"
billboard-py = "^7.0.0"
uvicorn = ">=0.22,<0.32"
databases = ">=0.5.2,<0.9.0"
sqlalchemy = "^1.4.26"
python-dotenv = ">=0.19.1,<1.1.0"
asyncpg = ">=0.27,<0.30"
psycopg2-binary = "^2.9.3"
responses = ">=0.13.4,<0.26.0"
httpx = ">=0.23,<0.26"
starlette = "^0.27.0"
httpcore = ">=0.15,<0.18"
pytest-asyncio = ">=0.15.1,<0.24.0"
cryptography = ">=38,<44"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<9.0.0"
pylint = ">=2.17.4,<4.0.0"
