[tool.poetry]
name = "training-song"
version = "0.1.0"
description = "API for training song"
authors = ["koayon <koayon@gmail.com>"]
license = "MIT"
packages = [{include = "training_song"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
lyricsgenius = "^3.0.1"
spotipy = "^2.23.0"
billboard-py = "^7.0.0"
uvicorn = "^0.22.0"
databases = "^0.5.2"
sqlalchemy ="^1.4.26"
python-dotenv ="^1.0.0"
asyncpg ="^0.27.0"
psycopg2-binary ="^2.9.6"


[tool.poetry.license]
file = "LICENSE"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
